Adjust max-width of text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>PERSONAL DESCRIPTION</h2>
     <div>NAME: Jesus Certain Bolaños</div>
     <div>SHORT DESCRIPTION ABOUT ME:</div> 
-    <p>I am 13 years old. I like to watch and play soccer, play video games. Also listen to Trap and Reggaeton music, play with my cat Tom, and play Carlos Duty Mobile.</p>
+    <p style = "max-width: 500px;">I am 13 years old. I like to watch and play soccer, play video games. Also listen to Trap and Reggaeton music, play with my cat Tom, and play Carlos Duty Mobile.</p>
 
 
     
