--- a/index.html
+++ b/index.html
@@ -10,8 +10,22 @@
 
     <h2>PERSONAL DESCRIPTION</h2>
     <div>NAME: Jesus Certain Bolaños</div>
-    <div>SHORT DESCRIPTION ABOUT ME:</div> 
-    <p style = "max-width: 500px;">I am 13 years old. I like to watch and play soccer, play video games. Also listen to Trap and Reggaeton music, play with my cat Tom, and play Carlos Duty Mobile.</p>
+    <div>SHORT DESCRIPTION ABOUT ME:
+        <p style = "max-width: 500px;">I am 13 years old. I like to watch and play soccer, play video games. Also listen to Trap and Reggaeton music, play with my cat Tom, and play Carlos Duty Mobile.</p>
+    </div> 
+    
+
+    <h2>MY SKILLS</h2>
+    <div>These are my principal skills:
+        <ul>
+            <li>Teamwork</li>
+            <li>Assertive Communication</li>
+            <li>Problem-Solving</li>
+            <li>Writing Skills</li>
+            <li>Programming Skills</li>
+            <li>Drawing and Painting</li>
+        </ul>
+    </div>
 
 
     
