--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     </div>
 
     <h2>BOOKS READ</h2>
+    <ol>
+        <li>Cien Años de Soledad</li>
+        <li>El Señor de los Anillos</li>
+        <li>La Ilíada</li>
+        <li>El Principito</li>
+        
+    </ol>
 
 
     
