Add Name and Image of Cien Años de Soledad

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 
     <h2>BOOKS READ</h2>
     <ol>
-        <li>Cien Años de Soledad</li>
+        <li>Cien Años de Soledad
+
+        <div> Autor: Gabriel García Márquez</div>
+        <div><img src="https://www.rae.es/sites/default/files/portada_cien_anos_de_soledad_0.jpg"></div>
+        </li>
+
         <li>El Señor de los Anillos</li>
         <li>La Ilíada</li>
         <li>El Principito</li>
