Add Autor and Image of El señor de los anillos

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         <div><img src="https://www.rae.es/sites/default/files/portada_cien_anos_de_soledad_0.jpg"></div>
         </li>
 
-        <li>El Señor de los Anillos</li>
+        <li>El Señor de los Anillos
+            <div> Autor: J.R.R. Tolkien</div>
+            <div><img src="https://images.cdn1.buscalibre.com/fit-in/360x360/35/2e/352e63af40b5cc4eada5cee03da49412.jpg"></div>
+        </li>
+
         <li>La Ilíada</li>
         <li>El Principito</li>
         
