Add Author and Image of La Ilíada

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
             <div><img src="https://images.cdn1.buscalibre.com/fit-in/360x360/35/2e/352e63af40b5cc4eada5cee03da49412.jpg"></div>
         </li>
 
-        <li>La Ilíada</li>
+        <li>La Ilíada
+            <div> Autor: Homero</div>
+            <div><img src="https://cdn.prod.website-files.com/6034d7d1f3e0f52c50b2adee/62542902e650b33bf6b7a912_60e710db1c3ed16b7bfff0df_9788418008962_Cub.jpeg"></div>
+        </li>
         <li>El Principito</li>
         
     </ol>
