Add Author and Image of El Principito

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             <div> Autor: Homero</div>
             <div><img src="https://cdn.prod.website-files.com/6034d7d1f3e0f52c50b2adee/62542902e650b33bf6b7a912_60e710db1c3ed16b7bfff0df_9788418008962_Cub.jpeg"></div>
         </li>
-        <li>El Principito</li>
+        <li>El Principito
+            <div> Autor: Antoine de Saint-Exupéry</div>
+            <div><img src="https://images.cdn3.buscalibre.com/fit-in/360x360/f4/bc/f4bc25288107cfebe6a9cbc1e245c00a.jpg"></div>
+        </li>
         
     </ol>
 
