page embellishment (spacing, color and font)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRUEBA EJERCICIO 1</title>
+
+    <style> body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 20px;
+    }
+
+    .contenedor {
+        background-color: #fff;
+        padding: 20px;
+        margin-bottom: 30px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+        margin-bottom: 15px;
+        color: #007BFF;
+    }
+
+    p {
+        line-height: 1.8;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+
+    .grid-item {
+        background-color: #e7e7e7;
+        padding: 15px;
+    }
+</style>
+
 </head>
 <body>
     <h1>WHO AM I?</h1>
@@ -32,21 +68,21 @@
         <li>Cien Años de Soledad
 
         <div> Autor: Gabriel García Márquez</div>
-        <div><img src="https://www.rae.es/sites/default/files/portada_cien_anos_de_soledad_0.jpg"></div>
+        <div><img width="500" height="600" src="https://www.rae.es/sites/default/files/portada_cien_anos_de_soledad_0.jpg"></div>
         </li>
 
         <li>El Señor de los Anillos
             <div> Autor: J.R.R. Tolkien</div>
-            <div><img src="https://images.cdn1.buscalibre.com/fit-in/360x360/35/2e/352e63af40b5cc4eada5cee03da49412.jpg"></div>
+            <div><img width="500" height="600"  src="https://images.cdn1.buscalibre.com/fit-in/360x360/35/2e/352e63af40b5cc4eada5cee03da49412.jpg"></div>
         </li>
 
         <li>La Ilíada
             <div> Autor: Homero</div>
-            <div><img src="https://cdn.prod.website-files.com/6034d7d1f3e0f52c50b2adee/62542902e650b33bf6b7a912_60e710db1c3ed16b7bfff0df_9788418008962_Cub.jpeg"></div>
+            <div><img width="500" height="600"  src="https://cdn.prod.website-files.com/6034d7d1f3e0f52c50b2adee/62542902e650b33bf6b7a912_60e710db1c3ed16b7bfff0df_9788418008962_Cub.jpeg"></div>
         </li>
         <li>El Principito
             <div> Autor: Antoine de Saint-Exupéry</div>
-            <div><img src="https://images.cdn3.buscalibre.com/fit-in/360x360/f4/bc/f4bc25288107cfebe6a9cbc1e245c00a.jpg"></div>
+            <div><img width="500" height="600"  src="https://images.cdn3.buscalibre.com/fit-in/360x360/f4/bc/f4bc25288107cfebe6a9cbc1e245c00a.jpg"></div>
         </li>
         
     </ol>
